--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 64px;
     text-align: center;
     padding: 10px;
 }
@@ -70,4 +70,5 @@ footer p {
     text-align: center;
     padding-bottom: 10px;
     padding-right: 10px;
+    padding-top: 0px;
 }
